fixed small-screen overflow

--- a/styles.css
+++ b/styles.css
@@ -617,7 +617,7 @@ h1 {
   body {
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden; 
   }
   .main {
     margin: 0;
